--- a/restaurant/src/main/resources/templates/counter/counter.html
+++ b/restaurant/src/main/resources/templates/counter/counter.html
@@ -500,28 +500,28 @@
             , form = layui.form
             , laydate = layui.laydate;
         $("input[type=text]").change(function () {
-            
+            //非数字
             if (isNaN($(this).val())) {
                 $(this).val("");
             }
-        
+            //正数
             if (!/^[0-9]+.?[0-9]*$/.test($(this).val())) {
                 $(this).val("");
             }
         });
 
         $("#truly-pay").change(function () {
-            
+            //正整数
             if (/^[0-9]+.?[0-9]*$/.test($(this).val())) {
                 var counterItem3Node = $(this).parents(".counter-item3-left")[0];
-                
+                //实付金额
                 var trulyMoney = parseFloat($(this).val());
-                
+                //应付金额
                 var mustPay = parseFloat($(counterItem3Node).find(".must-pay").text());
                 if (mustPay == 0) {
                     return;
                 }
-                
+                //找零
                 var changeMoney = (trulyMoney - mustPay).toFixed(2);
                 if (changeMoney < 0) {
                     $(this).val("");
@@ -536,6 +536,7 @@
             if (deskCode == '') {
                 return;
             }
+            //先清空界面
             clearAll();
             $.ajax({
                 url: '/restaurant/order/findDetail.do'
@@ -551,10 +552,11 @@
                             return;
                         }
                         console.log("data", res.data);
+                        //加载订单商品视图
                         loadView(res.data);
                     } else {
                         layer.alert(res.msg, {
-                            title: 'Submit!'
+                            title: '提交结果'
                             , anim: 6
                         });
                     }
@@ -566,7 +568,7 @@
             if (memberCode == '') {
                 return;
             }
-            
+            //验证手机号
             if (!/^[1][3,4,5,7,8][0-9]{9}$/.test(memberCode)) {
                 $("#memberCode").val("");
                 layer.msg("Incorrect Member Number Format!", {icon: 5});
@@ -584,14 +586,14 @@
                     if (res.code == 200) {
                         console.log("data", res.data);
                         if (res.data == null) {
-                            layer.msg("We dont find the corresponding Member!", {icon: 2});
+                            layer.msg("We dont find the correspond Member!", {icon: 2});
                             $("#memberCode").val("");
                             return;
                         }
                         loadMemberInfo(res.data);
                     } else {
                         layer.alert(res.msg, {
-                            title: 'Submit!'
+                            title: '提交结果'
                             , anim: 6
                         });
                     }
@@ -601,20 +603,20 @@
         $("#register").click(function () {
             layer.open({
                 type: 2
-                , title: 'Register Member'
+                , title: '注册会员'
                 , content: '/restaurant/member/add.html'
                 , maxmin: true
                 , area: ['700px', '430px']
-                , btn: ['Confrim', 'Cancel']
+                , btn: ['确定', '取消']
                 , yes: function (index, layero) {
                     var iframeWindow = window['layui-layer-iframe' + index]
-                       
+                        //该id是窗口打开html页面中表单提交按钮的id
                         , submitID = 'LAY-user-front-submit'
                         , submit = layero.find('iframe').contents().find('#' + submitID);
-                    
+                    //监听提交
                     iframeWindow.layui.form.on('submit(' + submitID + ')', function (data) {
-                        var field = data.field; 
-                        
+                        var field = data.field; //获取提交的字段
+                        //提交 Ajax 成功后，静态更新表格中的数据
                         $.ajax({
                             url: "/restaurant/member/add.do",
                             type: "post",
@@ -624,11 +626,11 @@
                                 if (result.code == 200) {
                                     $("#memberCode").val(data.field.memberCode);
                                     $("#member-button").click();
-                                    layer.close(index); 
+                                    layer.close(index); //关闭弹层
                                     layer.msg("Registered Success! ", {icon: 1});
                                 } else {
                                     layer.alert(result.msg, {
-                                        title: 'Submit'
+                                        title: '提交结果'
                                         , anim: 6
                                     });
                                 }
@@ -640,7 +642,7 @@
             });
         });
         $("#commit").click(function () {
-            
+            //结算函数
             settleAccounts();
         });
 
@@ -648,13 +650,13 @@
          * 加载左边商品明细视图
          */
         function loadView(data) {
-            
+            //加载明细商品列表
             for (var i = 0; i < data.length; i++) {
                 loadGoodsItemView(data[i]);
             }
-            
+            //订单号
             $(".orderCode").text(data[0].order.orderCode);
-            
+            //桌号
             $(".deskCode").text(data[0].order.deskCode);
             $(".totalPrice").text(parseFloat(data[0].order.totalPrice).toFixed(2));
             $(".totalMoney").text(parseFloat(data[0].order.totalPrice).toFixed(2));
@@ -662,6 +664,7 @@
         }
 
         /**
+         * 加载一项商品的视图
          * @param data
          */
         function loadGoodsItemView(data) {
@@ -675,12 +678,14 @@
         }
 
         /**
+         * 加载会员信息
          * @param data
          */
         function loadMemberInfo(data) {
             $(".member-name").text(data.name);
             $(".member-category").text(data.memberCategory.mcName);
             $(".discount").text(parseFloat(data.memberCategory.discount) * 10 + "折");
+            //消费金额
             var totalMoney = parseFloat($(".totalMoney").text());
             var discountMoney = (totalMoney * (1 - data.memberCategory.discount)).toFixed(2);
             $(".discount-money").text(discountMoney);
@@ -688,6 +693,7 @@
         }
 
         /**
+         * 清空所有数据
          */
         function clearAll() {
             $("#items").empty();
@@ -709,6 +715,7 @@
             $(".must-pay").text($(".totalMoney").text());
         }
         /**
+         * 结算函数
          */
         function settleAccounts(){
             if($(".orderCode").text()==''){
@@ -716,7 +723,7 @@
             }
             if ($("#truly-pay").val() == '') {
                 layer.alert("Please type the Amount Paid!", {
-                    title: 'Warning!'
+                    title: '警告'
                     , anim: 6
                 });
                 return;
@@ -724,18 +731,18 @@
             var data;
             var order = {};
             var member = {};
-            
+            //会员号
             member.memberCode = $("#memberCode").val();
             order.member = member;
-            
+            //应付金额
             order.mustPay = parseFloat($(".must-pay").text());
-        
+            //实付金额
             order.actualPay = parseFloat($("#truly-pay").val());
-           
+            //找零
             order.changeMoney = parseFloat($("#change-money").text());
-            
+            //打折金额
             order.discountMoney = parseFloat($(".discount-money").text());
-            
+            //订单号
             order.orderCode = $(".orderCode").text();
             data = JSON.stringify(order);
             console.log("data", data);
@@ -752,12 +759,12 @@
                            $("#deskCode").val("");
                            $("#memberCode").val("");
                            $("#truly-pay").val("");
-                            
+                            //重载当前页面
                             location.reload();
                         },1000);
                     }else{
                         layer.alert(res.msg,{
-                            title: 'Message!'
+                            title: '信息'
                             , anim: 6
                         });
                     }
