--- a/restaurant/src/main/resources/templates/desk/edit.html
+++ b/restaurant/src/main/resources/templates/desk/edit.html
@@ -16,6 +16,7 @@
     <div class="layui-card-body">
         <form class="layui-form layui-form-pane" action="" lay-filter="component-form-element">
             <div class="layui-form-item">
+                <!--隐藏域-->
                 <div class="layui-input-inline layui-hide">
                     <input type="text" name="deskId" th:value="${desk.deskId}" autocomplete="off" class="layui-input">
                 </div>
@@ -73,19 +74,21 @@
             , laydate = layui.laydate
             , layer = layui.layer;
 
+        //获取from表单提交事件
+        //此处submit中的值是lay-filter
         form.on('submit(component-form-element)', function (data) {
         });
-
+        //自定义验证
         form.verify({
-
+            //验证正数
             positive_number: function (value, item) {
                 if (parseFloat(value) < 0) {
-                    return 'Must be positive number!';
+                    return '必须为正数';
                 }
             },
             int_number: function (value, item) {
                 if (!/^(0|\+?[1-9][0-9]*)$/.test(value)) {
-                    return 'Must be positive integer!';
+                    return '必须为正整数';
                 }
             }
         });
