--- a/restaurant/src/main/resources/templates/desk/list.html
+++ b/restaurant/src/main/resources/templates/desk/list.html
@@ -73,9 +73,9 @@
 
                 </div>
             </script>
-
+            <!-- table表格-->
             <table id="tableList" lay-filter="tableList"></table>
-
+            <!--右边工具栏-->
             <script th:inline="javascript" type="text/html" id="barDemo">
                 {{#
                     if([[${role.roleId}]]==1){
@@ -110,7 +110,7 @@
                 }
                 }}
             </script>
-
+            <!--下边分页条-->
             <div class="layui-tab-item">
                 <div id="pageDemo"></div>
             </div>
@@ -124,59 +124,59 @@
                 ,form = layui.form
                 ,table = layui.table
                 ,laydate = layui.laydate;
-
+            //执行一个 table 实例
             table.render({
                 elem: '#tableList'
                 , height: "full"
-                , url: "/restaurant/desk/list.do" 
+                , url: "/restaurant/desk/list.do" //数据接口
                 , method: 'post'
                 , request: {
-                    pageName: 'pageNum' 
-                    , limitName: 'pageSize' 
+                    pageName: 'pageNum' //页码的参数名称，默认：page
+                    , limitName: 'pageSize' //每页数据量的参数名，默认：limit
                 }
                 ,height:520
                 , response: {
                     statusCode: 200
                 }
                 , limits: [5, 10, 20, 30]
-                , title: 'List of Dishes'
-                , page: true 
-                , even: true
-                , toolbar: '#test-table-toolbar-toolbarDemo' 
-                , cols: [[ 
+                , title: '菜品列表'
+                , page: true //开启分页
+                , even: true//开启背景隔行
+                , toolbar: '#test-table-toolbar-toolbarDemo' //开启工具栏，此处显示默认图标，可以自定义模板，详见文档
+                , cols: [[ //表头
                     {type: 'checkbox', fixed: 'left'}
                     , {field: 'deskId', title: 'ID', cellMinWidth: 60, sort: true, fixed: 'left',hide:true,align:'center'}
-                    , {field: 'deskCode', title: 'Table No.', cellMinWidth: 150, sort: true,align:'center'}
-                    , {field: 'peopleCount', title: 'People',align:'center',sort:true, cellMinWidth: 100,templet:'<div>{{d.peopleCount}}人</div>'}
-                    , {field: 'idleStatus', title: 'Status',align:'center', cellMinWidth:120, templet:'#idleStatus'}
-                    , {field: 'createTime', title: 'Creating Date',align:'center', cellMinWidth: 170,sort: true}
-                    , {field: 'modifyTime', title: 'Editing Date',align:'center', cellMinWidth: 170,sort: true}
-                    , {fixed: 'right',align:'center', title: "Toolbar", cellMinWidth: 180, toolbar: '#barDemo'}
+                    , {field: 'deskCode', title: '桌位编号 Table No.', cellMinWidth: 150, sort: true,align:'center'}
+                    , {field: 'peopleCount', title: '座位人数 People',align:'center',sort:true, cellMinWidth: 100,templet:'<div>{{d.peopleCount}}人</div>'}
+                    , {field: 'idleStatus', title: '桌位状态 Status',align:'center', cellMinWidth:120, templet:'#idleStatus'}
+                    , {field: 'createTime', title: '创建时间 Creating Date',align:'center', cellMinWidth: 170,sort: true}
+                    , {field: 'modifyTime', title: '修改时间 Editing Date',align:'center', cellMinWidth: 170,sort: true}
+                    , {fixed: 'right',align:'center', title: "工具栏 Toolbar", cellMinWidth: 180, toolbar: '#barDemo'}
                 ]]
             });
 
-
+            //监听头工具栏事件
             table.on('toolbar(tableList)', function (obj) {
                 var checkStatus = table.checkStatus(obj.config.id)
-                    , data = checkStatus.data; 
+                    , data = checkStatus.data; //获取选中的数据
                 switch (obj.event) {
                     case 'add':
                         layer.open({
                             type: 2
-                            ,title: 'Add table'
+                            ,title: '添加桌位'
                             ,content: '/restaurant/desk/add.html'
                             ,maxmin: true
                             ,area: ['460px', '305px']
-                            ,btn: ['Confrim', 'Cancel']
+                            ,btn: ['确定', '取消']
                             ,yes: function(index, layero){
                                 var iframeWindow = window['layui-layer-iframe'+ index]
-
+                                    //该id是窗口打开html页面中表单提交按钮的id
                                     ,submitID = 'LAY-user-front-submit'
                                     ,submit = layero.find('iframe').contents().find('#'+ submitID);
-
+                                //监听提交
                                 iframeWindow.layui.form.on('submit('+ submitID +')', function(data){
-                                    var field = data.field; 
-                                    
+                                    var field = data.field; //获取提交的字段
+                                    //提交 Ajax 成功后，静态更新表格中的数据
                                     $.ajax({
                                         url: "/restaurant/desk/add.do",
                                         type: "post",
@@ -184,17 +184,17 @@
                                         data: data.field,
                                         success: function(result) {
                                             if(result.code == 200) {
-                                                table.reload('tableList'); 
-                                                layer.close(index); 
+                                                table.reload('tableList'); //数据刷新
+                                                layer.close(index); //关闭弹层
                                             }else {
                                                 layer.alert(result.msg, {
-                                                    title: 'Submit'
+                                                    title: '提交结果'
                                                     ,anim: 6
                                                 });
                                             }
                                         },
                                         error: function (result, type) {
-                                            layer.msg('Fail to add!', {icon: 2, time: 1000});
+                                            layer.msg('添加失败！', {icon: 2, time: 1000});
                                         }
                                     });
                                 });
@@ -204,27 +204,28 @@
                         break;
                     case 'update':
                         if (data.length === 0) {
-                            layer.msg('Please choose one!');
+                            layer.msg('请选择一行');
                         } else if (data.length > 1) {
-                            layer.msg('Only one dishes to be edit!');
+                            layer.msg('只能同时编辑一个');
                         } else {
                             var deskId = checkStatus.data[0].deskId;
                             var url = '/restaurant/desk/edit.html/'+deskId;
                             layer.open({
                                 type: 2
-                                ,title: 'Edit the table'
+                                ,title: '编辑桌位'
                                 ,content:url
                                 ,maxmin: true
                                 ,area: ['460px', '305px']
-                                ,btn: ['Confrim', 'Cancel']
+                                ,btn: ['确定', '取消']
                                 ,yes: function(index, layero){
                                     var iframeWindow = window['layui-layer-iframe'+ index]
                                         ,submitID = 'LAY-user-front-submit'
                                         ,submit = layero.find('iframe').contents().find('#'+ submitID);
 
-                                    
+                                    //监听提交
                                     iframeWindow.layui.form.on('submit('+ submitID +')', function(data){
-                                        var field = data.field; 
+                                        var field = data.field; //获取提交的字段
+                                        //提交 Ajax 成功后，静态更新表格中的数据
                                         $.ajax({
                                             url: "/restaurant/desk/edit.do",
                                             type: "post",
@@ -232,11 +233,11 @@
                                             data:field,
                                             success: function(result) {
                                                 if(result.code == 200){
-                                                    table.reload('tableList'); 
-                                                    layer.close(index); 
+                                                    table.reload('tableList'); //数据刷新
+                                                    layer.close(index); //关闭弹层
                                                 }else {
                                                     layer.alert(result.msg, {
-                                                        title: 'Submit!'
+                                                        title: '提交结果'
                                                         ,anim: 6
                                                     });
                                                 }
@@ -250,9 +251,9 @@
                         break;
                     case 'delete':
                         if (data.length === 0) {
-                            layer.msg('Please choose one!');
+                            layer.msg('请选择一行');
                         } else {
-                            layer.confirm('Delete?', function(){
+                            layer.confirm('确定删除?', function(){
                                 var ids = '';
                                 for (var i = 0; i < data.length; i++) {
                                     ids += data[i].deskId + ",";
@@ -264,17 +265,17 @@
                                     data: {ids:ids},
                                     success: function(result) {
                                         if(result.code == 200) {
-                                            table.reload('tableList'); 
+                                            table.reload('tableList'); //数据刷新
                                             layer.msg('删除成功!', {icon: 6});
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit!'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
                                     },
                                     error: function (result, type) {
-                                        layer.msg('Fail to add!', {icon: 2, time: 1000});
+                                        layer.msg('删除失败！', {icon: 2, time: 1000});
                                     }
                                 });
                             });
@@ -288,7 +289,7 @@
                 var data = obj.data //获得当前行数据
                     , layEvent = obj.event; //获得 lay-event 对应的值
                 if (layEvent === 'del') {
-                    layer.confirm('delete【'+data.deskCode+'】?', function (index) {
+                    layer.confirm('确定要删除【'+data.deskCode+'】?', function (index) {
                         $.ajax({
                             url: "/restaurant/desk/del.do",
                             type: "post",
@@ -296,8 +297,8 @@
                             data: {ids:data.deskId},
                             success: function(result) {
                                 if(result.code == 200) {
-                                    obj.del(); 
-                                    layer.msg('Success!', {icon: 6});
+                                    obj.del(); //删除对应行（tr）的DOM结构
+                                    layer.msg('删除成功!', {icon: 6});
                                 }else {
                                     layer.alert(result.msg, {
                                         title: '提交结果'
@@ -307,25 +308,26 @@
                             }
                         });
                         layer.close(index);
-
+                        //向服务端发送删除指令
                     });
                 } else if (layEvent === 'edit') {
                     var url = '/restaurant/desk/edit.html/'+data.deskId;
                     layer.open({
                         type: 2
-                        ,title: 'Edit the table number'
+                        ,title: '编辑桌位'
                         ,content:url
                         ,maxmin: true
                         ,area: ['460px', '305px']
-                        ,btn: ['Confrim', 'Cancel']
+                        ,btn: ['确定', '取消']
                         ,yes: function(index, layero){
                             var iframeWindow = window['layui-layer-iframe'+ index]
                                 ,submitID = 'LAY-user-front-submit'
                                 ,submit = layero.find('iframe').contents().find('#'+ submitID);
 
-                            
+                            //监听提交
                             iframeWindow.layui.form.on('submit('+ submitID +')', function(data){
-                                var field = data.field; 
+                                var field = data.field; //获取提交的字段
+                                //提交 Ajax 成功后，静态更新表格中的数据
                                 $.ajax({
                                     url: "/restaurant/desk/edit.do",
                                     type: "post",
@@ -333,11 +335,11 @@
                                     data:field,
                                     success: function(result) {
                                         if(result.code == 200) {
-                                            table.reload('tableList'); 
-                                            layer.close(index); 
+                                            table.reload('tableList'); //数据刷新
+                                            layer.close(index); //关闭弹层
                                         }else {
                                             layer.alert(result.msg, {
-                                                title: 'Submit'
+                                                title: '提交结果'
                                                 ,anim: 6
                                             });
                                         }
@@ -350,14 +352,14 @@
                 }
             });
 
-            
+            //监听搜索
             form.on('submit(Search)', function(data){
                 var field = data.field;
-                
+                //执行重载
                 table.reload('tableList', {
                     where: field
                     ,page: {
-                        curr: 1 
+                        curr: 1 //重新从第 1 页开始
                     }
                 });
             });
