--- a/restaurant/src/main/resources/templates/error/403.html
+++ b/restaurant/src/main/resources/templates/error/403.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -31,9 +30,9 @@
 <script th:src="@{/layuiadmin/layui/layui.js}" src="../../static/layuiadmin/layui/layui.js"></script>
 <script>
     layui.config({
-        base: '../layuiadmin/' 
+        base: '../layuiadmin/' //静态资源所在路径
     }).extend({
-        index: 'lib/index'
+        index: 'lib/index' //主入口模块
     }).use(['index']);
 </script>
 </body>
